# TestVulnerFinder

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_PHASE1.md  CONVERSATIONAL_GUIDE.md  CONVERSATIONAL_IMPLEMENTATION.md  CONVERSATIONAL_README.md  DEPLOYMENT.md  DESKTOP_README.md  FEATURES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_RELEASE_NOTES.md  PLAYBOOKS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_CONVERSATIONAL.md  QUICKSTART_PHASE1.md  README.md  app.py  aurora.py  aurora_chat.py  install.sh  nexus.sh  pyproject.toml  requirements.txt  setup.py  test_conversational_basic.py
core/: __init__.py  conversational.py  engine.py  evidence.py  fingerprint.py  http.py  oast_listener.py  scoring.py
examples/: conversational_demo.py  ghost_update_demo.py  terminal-outputs.md
lib/: colors.sh  confidence.sh  fingerprint.sh  http.sh  reporting.sh  ui.sh
modules/: __init__.py  detect_fastjson.sh  detect_ghostscript.sh  detect_jackson.sh  detect_kibana.sh  detect_log4shell.sh  detect_spring4shell.sh  detect_struts2.sh  detect_text4shell.sh  detect_vm2.sh  fastjson.py  ghostscript.py  jackson.py  kibana.py  log4shell.py  spring4shell.py  struts2.py  text4shell.py  vm2.py
soc_eater_v2/: __init__.py  desktop_app.py  desktop_main.py  main.py  requirements.txt  soc_brain.py
soc_eater_v2/playbooks/: akira_ransomware.yaml  apt_campaign.yaml  brute_force_attack.yaml  business_email_compromise.yaml  c2_beaconing.yaml  cloud_iam_abuse.yaml  compromised_account.yaml  container_breakout.yaml  credential_dumping.yaml  cryptomining_malware.yaml  data_exfiltration.yaml  ddos_attack.yaml  dns_tunneling.yaml  edr_process_tree.yaml  fileless_malware.yaml  insider_threat.yaml  lateral_movement_windows.yaml  lockbit_ransomware.yaml  malicious_macro.yaml  malware_detonation.yaml  pcap_ioc_extraction.yaml  persistence_registry_tasks.yaml  phantomlord.yaml  phishing_triage.yaml  powershell_suspicious.yaml  privilege_escalation_windows.yaml  qakbot_detection.yaml  ransomware_user_clicked.yaml  rogue_admin.yaml  shadow_it.yaml  supply_chain_attack.yaml  suspicious_rdp_session.yaml  vpn_anomaly.yaml  web_attack_sqli_xss.yaml  zero_day_exploit.yaml
soc_eater_v2/templates/: report.md.j2
soc_eater_v2/utils/: __init__.py  pcap_parser.py
ui/: __init__.py  banner.py  renderer.py  theme.py
utils/: __init__.py  helpers.py  oast.py
