[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-recon"
version = "0.1.0"
description = "AURORA — high-confidence reconnaissance for historic Java/Node RCE chains"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AURORA Contributors"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
waf-bypass = [
  "httpx>=0.27.0",
]
hive-mind = [
  "redis>=5.0.0",
  "pyzmq>=25.0.0",
]
sonar = [
  "interactsh>=2.0.0",
]
all = [
  "redis>=5.0.0",
  "pyzmq>=25.0.0",
  "interactsh>=2.0.0",
]

[project.scripts]
aurora = "aurora:app"
aurora-chat = "aurora_chat:app"

[tool.setuptools]
py-modules = ["aurora", "aurora_chat"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "ui*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
  "SIM",# simplify
  "RUF",# ruff
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["core", "modules", "ui", "utils", "aurora"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx", "typer", "rich.*", "google.genai", "google.genai.*"]
ignore_missing_imports = true
